--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -25,7 +25,7 @@ div#wall div.parent div:last-child div#tag-6:nth-child(1) {
 }
 
 body div#wall div.parent div > #tag-7.slick {
-  
+  display: none;
 }
 
 
